version bump, bug fix, and repl utility