@@ -9,8 +9,7 @@
 			'[dj.dependencies]
 			'[clojure.tools.namespace.repl])]
   :profiles {:database {:dependencies [[com.datomic/datomic-free "0.8.3789"]]}
-             :cljs {:dependencies [[org.clojure/google-closure-library "0.0-2029"]
-                                   [org.clojure/google-closure-library-third-party "0.0-2029"]
-                                   [org.clojure/tools.reader "0.7.5"]
-                                   [org.clojure/data.json "0.2.2"]]}}
-  :jvm-opts ["-XX:MaxPermSize=256M"])
+             :cljs {:dependencies [[org.clojure/google-closure-library "0.0-20130212-95c19e7f0f5f"]
+                                   [org.clojure/google-closure-library-third-party "0.0-20130212-95c19e7f0f5f"]
+                                   [org.clojure/tools.reader "0.8.0"]
+                                   [org.clojure/data.json "0.2.2"]]}})
